# machine-learning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml
machine_learning/homework/hw1/notebooks/: Analisis_Calificaciones_y_Estudio.ipynb
machine_learning/homework/hw1/src/data/: load_data.py
machine_learning/homework/hw1/src/features/: build_features.py
machine_learning/homework/hw1/src/models/: predict_model.py  train_model.py
machine_learning/homework/hw1/src/visualization/: visualize.py
machine_learning/homework/hw6.2/code/: main.py
machine_learning/homework/hw6.2/notebooks/: report.ipynb
machine_learning/laboratory/: 2024_02_08_RPAA_Aprendizaje_Supervisado.ipynb  2024_02_09_RPAA_Práctica_2.ipynb  2024_02_12_RPAA_Metricas.ipynb  2024_02_14_RPAA_sobre-entrenamiento_ruido.ipynb  2024_02_15_RPAA_N_FA_ES_MC.ipynb  2024_02_15_RPAA_dimension_roc.ipynb
machine_learning/laboratory/lab1/: 2024_02_06_RPAA_ayuddantía_regresionLineal.ipynb  Laboratorio_1_Patrones.ipynb  articulos.csv  clasificaciones_articulos.csv  precios_casas.csv
machine_learning/laboratory/lab2/: 2024_02_02_RPAA_Aprendizaje_Supervisado.ipynb
machine_learning/practices/practice2/notebooks/: Decisiones_Bayesianas.ipynb
machine_learning/practices/practice3/notebooks/: main.ipynb
machine_learning/practices/practice5/notebooks/: main.ipynb
machine_learning/practices/practice7/notebooks/: main.ipynb
machine_learning/test/: load_testt.py  string_test.py
machine_learning/utils/ui/: before_tests.py  failed_tests.py  finished_tests.py  setup.py
