# * Centralizing configs in one file...

[tool.poetry]
name = "machine-learning"
version = "1.0.0"
description = "Course of Machine Learning"
license = ""
authors = [
    "Yonathan Berith Jaramillo Ramírez <dercomputerschamane@gmail.com>",
]

repository = "https://github.com/Yony6041/machine-learning"


# README file(s) are used as the package description
readme = "README.md"

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]

# * Production Dependencies
python = ">=3.12, ~=3.8"
numpy = "^1.26.3"
pandas = "^2.2.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-instafail = "^0.5.0"
pytest-spec = "^3.2.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"
coverage = "^7.3.2"
black = "^24.3.0"
pre-commit = "^3.6.0"
rich = "^13.7.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[tool.pytest.ini_options]
console_output_style = "count"
minversion = "6.0"
addopts = "--new-first --spec --verbose --instafail --cov-branch -rA -n 4 --capture=fd --cov=./ --cov-report=term --cov-report=term-missing --color=yes --code-highlight=yes --durations=5 -vv --cov-fail-under=30"
python_files = ["*_test.py"]
